src/objects/Message__c.object
<CustomObject>
    <description>This object will support internal office messages among users, and office to patient users as well.</description>
    <fields>
        <fullName>Body_Rich_Text__c</fullName>
        <label>Body</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Body__c</fullName>
        <label>Body</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>From_Name__c</fullName>
        <description>Used to show the text name of the From field.</description>
        <formula>From__r.FirstName &amp; &apos; &apos; &amp;  From__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>From</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>From__c</fullName>
        <description>This is a user lookup field that let&apos;s the receptant know who sent the message.</description>
        <label>From</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Messages1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Has_Attachments__c</fullName>
        <defaultValue>false</defaultValue>
        <description>used to display the paper clip on the inbox and outbox if the message has an attachment.</description>
        <label>Has Attachments</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsRead__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Read</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <picklist>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Normal</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Reply_Rich_Text__c</fullName>
        <label>Reply</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Reply__c</fullName>
        <description>This field will be used when replying to a message, to keep the Body as a read only field</description>
        <label>Reply</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Sent__c</fullName>
        <defaultValue>NOW()</defaultValue>
        <description>holds the sent value of when the message object was changed</description>
        <label>Sent</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <formula>IF( IsRead__c ,IMAGE(&quot;/servlet.ImageServer?id=01530000000sjUK&amp;oid=00D30000000YukK&quot;,&quot;Open&quot;,10,10) ,
   IMAGE(&quot;/servlet.ImageServer?id=01530000000sjMt&amp;oid=00D30000000YukK&quot;,&quot;Closed&quot;,10,10))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>To_Name__c</fullName>
        <description>Used to display the text name of the To field</description>
        <formula>To__r.FirstName &amp; &apos; &apos; &amp;  To__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>To</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>To__c</fullName>
        <label>To</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Messages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Truncated_Body__c</fullName>
        <description>This field will be filled out by apex code and is used to display in the users message inbox</description>
        <label>Body</label>
        <type>TextArea</type>
    </fields>
    <label>Message</label>
    <listViews>
        <fullName>All</fullName>
        <columns>From__c</columns>
        <columns>To__c</columns>
        <columns>Status__c</columns>
        <columns>Priority__c</columns>
        <columns>NAME</columns>
        <columns>Body__c</columns>
        <columns>IsRead__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Mine</fullName>
        <columns>NAME</columns>
        <columns>From__c</columns>
        <columns>Priority__c</columns>
        <columns>IsRead__c</columns>
        <columns>Status__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Mine</filterScope>
        <label>My Messages</label>
    </listViews>
    <nameField>
        <label>Subject</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Messages</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>